// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPrefixLog test base test 1`] = `
[
  "%cObject.createPrefixLogBaseTest::",
  "color: #de1214; font-weight: bold",
  " ttt",
]
`;

exports[`createPrefixLog test object params test 1`] = `
[
  "%cObject.createPrefixLogBaseTest::",
  "color: #de1214; font-weight: bold",
  "",
  {
    "a": "test",
  },
]
`;

exports[`overWriteLog test base test 1`] = `
[
  "%cObject.overWriteLogTest::",
  "color: #e4bd14; font-weight: bold",
  " test",
]
`;

exports[`patchLog test base test 1`] = `
[
  "%cObject.patchLogTest::",
  "color: #14e4c0; font-weight: bold",
  " test",
]
`;
